# promote_autonomy

./: .editorconfig  .firebaserc  .gitignore  ADK_IMPLEMENTATION_PLAN.md  ADK_MIGRATION_CHECKLIST.md  ARCHITECTURE.md  BLOG_PUBLISHING_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  FEATURE_ROADMAP.md  HACKATHON_BUILD_PLAN.md  HACKATHON_SUBMISSION_CHECKLIST.md  MVP spec.md  Makefile  NEW_PR_DESCRIPTION.txt  POST_MERGE_ACTIONS.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  VEO_SETUP_COMPLETE.md  cloudbuild-creative.yaml  cloudbuild-strategy.yaml  cors-config.json  current_status_analysis_20251110.md  deploy.sh  deployment-info.txt  firestore.rules  generate-diagram-png.sh  session_handover.md
.claude/: session-handover-pr11.md
.gemini/: styleguide.md
.github/workflows/: ci.yml
creative-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
creative-agent/app/: main.py
creative-agent/app/agents/: __init__.py  coordinator.py  tools.py
creative-agent/app/core/: config.py
creative-agent/app/routers/: consume.py
creative-agent/app/services/: copy.py  firestore.py  image.py  storage.py  video.py
creative-agent/eval_sets/: README.md  creative_coordinator_basic.evalset.json
creative-agent/tests/: conftest.py
creative-agent/tests/integration/: test_adk_orchestration.py
creative-agent/tests/unit/: test_adk_coordinator.py  test_adk_tools.py  test_api_endpoint.py  test_services.py  test_video_service.py
docs/: DEPLOYMENT.md  create-architecture-diagram.md  deployment-guide.md  firebase-setup.md  storage-security.md
docs/archive/: ADK_COMPARISON.md  ADK_IMPLEMENTATION_PLAN.md  ADK_MIGRATION_CHECKLIST.md  BLOG_POST.md  MVP_SPEC.md  ROADMAP.md
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BrandStyleForm.tsx
frontend/lib/: api.ts  firebase.ts  types.ts
infra/: README.md  setup-iam-policies.sh
shared/: README.md  pyproject.toml
shared/src/promote_autonomy_shared/: __init__.py  schemas.py
shared/tests/: test_schemas.py
strategy-agent/: .dockerignore  .env.example  .env.test  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  test_gemini_real.py  test_reference_image_integration.py
strategy-agent/app/: __init__.py  main.py
strategy-agent/app/core/: config.py
strategy-agent/app/models/: request.py  response.py
strategy-agent/app/routers/: approve.py  strategize.py
strategy-agent/app/services/: firestore.py  gemini.py  pubsub.py  storage.py
strategy-agent/tests/: __init__.py  conftest.py
strategy-agent/tests/unit/: test_api_endpoints.py  test_gemini.py  test_storage.py
